# tillich-lectures-static

./: .gitignore  README.md  build.xml  fetch_data.sh  make_bible_index.py  make_ts_index.py  pyproject.toml  tillich-lectures-static.xpr
.github/workflows/: build.yml
html/css/: style.css
html/js/: facs.js  main.js  map_table_cfg.js  navbar_search.js  pdf.js  search.js  swipe.js
html/oai-pmh/: identify.xml  list-records.xml
html/tabulator-js/: config.js  toc.js
oai-pmh/: make_files.py
oai-pmh/templates/: ListIdentifiers.j2  header.j2  identify.j2  list-records.j2
pyscripts/: download_images.py  make_bible_index.py  make_keyword_index.py  make_ts_index.py
shellscripts/: config.ini  dl_imprint.sh  dse_setup.py  fetch_data.sh  make_pdf.sh
xslt/: 404.xsl  additionals.xsl  editions.xsl  imprint.xsl  index.xsl  lectures.xsl  listbibl.xsl  listbible.xsl  listkeywords.xsl  listorg.xsl  listpainting.xsl  listperson.xsl  listplace.xsl  meta.xsl  search.xsl  to_latex.xsl  to_latex_single.xsl  toc-additional.xsl  toc.xsl
xslt/partials/: bibl.xsl  entities.xsl  html_footer.xsl  html_head.xsl  html_navbar.xsl  org.xsl  painting.xsl  params.xsl  person.xsl  place.xsl  shared.xsl  tabulator_dl_buttons.xsl  tabulator_js.xsl
