[project]
name = "tillich-lectures-static"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "acdh-cfts-pyutils>=0.2",
    "acdh-tei-pyutils>=2.3.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
